--- a/index.html
+++ b/index.html
@@ -687,30 +687,34 @@
     <div class="txtwrap">
       <div class="nav_wrap">
         <ul class="nav_txt">
-          <li>공지사항</li>
-          <li>이용약관</li>
-          <li>개인정보처리방침</li>
-          <li>영상정보처리방침</li>
-          <li>매장안내</li>
-          <li>고객센터</li>
-          <button class="select_btn">Global Skinfood</button>
-          <ul class="select_list">
-            <li>US</li>
-            <li>Japan</li>
-            <li>Hong Kong</li>
-            <li>Iraq</li>
-            <li>Turkey</li>
-            <li>Vietnam</li>
-            <li>Thailand</li>
-            <li>Guatemala</li>
-            <li>Bangladesh</li>
-          </ul>
-          <button class="select_btn">Language</button>
-          <ul class="select_list">
-            <li>KOREAN</li>
-            <li>ENGLISH</li>
-          </ul>
+          <li><a href="">공지사항</a></li>
+          <li><a href="">이용약관</a></li>
+          <li><a href="">개인정보처리방침</a></li>
+          <li><a href=""><b>영상정보처리방침</b></a></li>
+          <li><a href="">매장안내</a></li>
+          <li><a href="">고객센터</a></li>
         </ul>
+        <div class="select">
+          <div class="select_btn">Global Skinfood
+            <ul class="select_list">
+              <li>US</li>
+              <li>Japan</li>
+              <li>Hong Kong</li>
+              <li>Iraq</li>
+              <li>Turkey</li>
+              <li>Vietnam</li>
+              <li>Thailand</li>
+              <li>Guatemala</li>
+              <li>Bangladesh</li>
+            </ul>
+          </div>
+          <div class="select_btn">Language
+            <ul class="select_list">
+              <li>KOREAN</li>
+              <li>ENGLISH</li>
+            </ul>
+          </div>
+        </div>
         <div class="sns_txt">
           <div class="img"></div>
           <div class="img"></div>
