--- a/index.html
+++ b/index.html
@@ -723,24 +723,24 @@
       </div>
       <div class="copy_wrap">
         <ul class="copy_txt">
-          <li>상호 (주)스킨푸드</li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="first">상호 (주)스킨푸드</li>
+          <li>대표이사 구도곤</li>
+          <li>Tel 080-012-7878</li>
+          <li>Fax 02-597-4199</li><br>
+          <li class="first">주소 경기도 안성시 미양면 제2공단1길 104 스킨푸드</li><br>
+          <li class="first">사업자등록번호 125-81-54503</li>
+          <li>통신사업자번호 제2005-00050호</li>
+          <li>개인정보 보호 책임자 옥봉근</li><br>
+          <li class="first">제휴문의 webmaster@theskinfood.com</li>
+          <li>마케팅제휴문의 : sf_mkt@theskinfood.com</li><br>
+          <li class="first">국내영업 문의 hjimp@theskinfood.com</li>
+          <li>해외영업 문의 overseas@theskinfood.com</li>
         </ul>
         <div class="cs_txt">
-          <div class="cs_txt1"></div>
-          <div class="cs_txt2"></div>
-          <div class="cs_txt3"></div>
-          <div class="cs_txt4"></div>
+          <p class="cs_txt1">고객센터</p>
+          <p class="cs_txt2">080-012-7878</p>
+          <p class="cs_txt3">평일 09:00 ~ 17:00</p>
+          <p class="cs_txt4">점심시간 11:30 ~ 12:30</p>
         </div>
       </div>
     </div>
