--- a/index.html
+++ b/index.html
@@ -53,36 +53,31 @@
     </div>
   </header>
   <div id="content1">
-      <ul class="slide">
-        <li>
-          <img src="./images/content1_1.jpg" alt="">
-        </li>
-        <li>
-          <img src="./images/content1_2.jpg" alt="">
-        </li>
-        <li>
-          <img src="./images/content1_3.jpg" alt="">
-        </li>
-        <li>
-          <img src="./images/content1_4.jpg" alt="">
-        </li>
-        <li>
-          <img src="./images/content1_5.jpg" alt="">
-        </li>
-        <li>
-          <img src="./images/content1_6.jpg" alt="">
-        </li>
-        <li>
-          <img src="./images/content1_7.jpg" alt="">
-        </li>
-        <li>
-          <img src="./images/content1_8.jpg" alt="">
-        </li>
-      </ul>
-    <div class="abtn prev"></div>
-    <div class="abtn next"></div>
-    <ul class="bullet">
-      <li><a href=""></a></li>
+    <ul class="mainslide">
+      <li>
+        <img src="./images/content1_1.jpg" alt="">
+      </li>
+      <li>
+        <img src="./images/content1_2.jpg" alt="">
+      </li>
+      <li>
+        <img src="./images/content1_3.jpg" alt="">
+      </li>
+      <li>
+        <img src="./images/content1_4.jpg" alt="">
+      </li>
+      <li>
+        <img src="./images/content1_5.jpg" alt="">
+      </li>
+      <li>
+        <img src="./images/content1_6.jpg" alt="">
+      </li>
+      <li>
+        <img src="./images/content1_7.jpg" alt="">
+      </li>
+      <li>
+        <img src="./images/content1_8.jpg" alt="">
+      </li>
     </ul>
   </div>
   <div class="banner">
@@ -105,8 +100,8 @@
               </div>
               <div class="txt">
                 <div class="txt1">NEW 레몬 버베나 바디 워시 (450ml)</div>
-                <div class="txt2">₩ 16,000</div>
-                <div class="txt3">₩ </div>
+                <div class="txt2"></div>
+                <div class="txt3">₩ 16,000</div>
               </div>
             </div>
             <div class="recomsecond">
@@ -115,8 +110,8 @@
               </div>
               <div class="txt">
                 <div class="txt1">허니 리치 바디 에센스 (450ml)</div>
-                <div class="txt2">₩ </div>
-                <div class="txt3">₩ </div>
+                <div class="txt2"></div>
+                <div class="txt3">₩ 16,000</div>
               </div>
             </div>
           </div>
@@ -132,8 +127,8 @@
               </div>
               <div class="txt">
                 <div class="txt1">[꿀광보습]로열허니 프로폴리스 인리치 마스크(30ml)</div>
-                <div class="txt2">₩ </div>
-                <div class="txt3">₩ </div>
+                <div class="txt2"></div>
+                <div class="txt3">₩ 3,000</div>
               </div>
             </div>
             <div class="recomsecond">
@@ -142,8 +137,8 @@
               </div>
               <div class="txt">
                 <div class="txt1">[수분진정] 캐롯 카로틴 마스크(당근 마스크)(27ml)</div>
-                <div class="txt2">₩ </div>
-                <div class="txt3">₩ </div>
+                <div class="txt2"></div>
+                <div class="txt3">₩ 3,000</div>
               </div>
             </div>
           </div>
@@ -159,8 +154,8 @@
               </div>
               <div class="txt">
                 <div class="txt1">[비건/혼합자차]NEW 베리 생기 선크림 50ml SPF50+ PA++++</div>
-                <div class="txt2">₩ </div>
-                <div class="txt3">₩ </div>
+                <div class="txt2">₩ 24,000</div>
+                <div class="txt3">₩ 15,600</div>
               </div>
             </div>
             <div class="recomsecond">
@@ -169,8 +164,8 @@
               </div>
               <div class="txt">
                 <div class="txt1">[비건/무기자차]NEW 베리 진정 선크림 50ml SPF50+ PA++++</div>
-                <div class="txt2">₩ </div>
-                <div class="txt3">₩ </div>
+                <div class="txt2">₩ 24,000</div>
+                <div class="txt3">₩ 15,600</div>
               </div>
             </div>
           </div>
@@ -186,8 +181,8 @@
               </div>
               <div class="txt">
                 <div class="txt1">로열허니 프로폴리스 인리치 에센스 (50ml)</div>
-                <div class="txt2">₩ </div>
-                <div class="txt3">₩ </div>
+                <div class="txt2">₩ 32,000</div>
+                <div class="txt3">₩ 20,800</div>
               </div>
             </div>
             <div class="recomsecond">
@@ -196,8 +191,8 @@
               </div>
               <div class="txt">
                 <div class="txt1">로열허니 프로폴리스 인리치 크림 미스트(120ml)</div>
-                <div class="txt2">₩ </div>
-                <div class="txt3">₩ </div>
+                <div class="txt2"></div>
+                <div class="txt3">₩ 22,000</div>
               </div>
             </div>
           </div>
@@ -689,8 +684,8 @@
         <ul class="nav_txt">
           <li><a href="">공지사항</a></li>
           <li><a href="">이용약관</a></li>
-          <li><a href="">개인정보처리방침</a></li>
-          <li><a href=""><b>영상정보처리방침</b></a></li>
+          <li><a href=""><b>개인정보처리방침</b></a></li>
+          <li><a href="">영상정보처리방침</a></li>
           <li><a href="">매장안내</a></li>
           <li><a href="">고객센터</a></li>
         </ul>
