--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
         <a href="" class="basket"></a>
       </div>
     </div>
+    <div class="smenuwrap">
+      <div class="smenu">
+        <div class="img">
+          <img src="" alt="">
+        </div>
+        <ul class="gnb_2depth">
+
+        </ul>
+      </div>
+    </div>
   </header>
   <div id="content1">
     <ul class="mainslide">
