--- a/index.html
+++ b/index.html
@@ -54,10 +54,129 @@
     <div class="smenuwrap">
       <div class="smenu">
         <div class="img">
-          <img src="" alt="">
+          <img src="./images/gnb_비건.jpg" alt="">
         </div>
-        <ul class="gnb_2depth">
-
+        <ul class="gnb_2depth_wrap">
+          <li>
+            <ul class="gnb_2depth">
+              <li>베스트&신상품</li>
+              <li>유형별
+                <ul class="gnb_3depth">
+                  <li>스킨케어</li>
+                  <li>마스크</li>
+                  <li>선</li>
+                  <li>클렌징</li>
+                  <li>바디</li>
+                  <li>헤어</li>
+                  <li>남성</li>
+                  <li>베이스 메이크업</li>
+                  <li>컬러 메이크업</li>
+                  <li>미용 부자재</li>
+                </ul>
+              </li>
+              <li>고민별
+                <ul class="gnb_3depth">
+                  <li>브라이트닝</li>
+                  <li>모공</li>
+                  <li>트러블</li>
+                  <li>보습</li>
+                  <li>수분</li>
+                  <li>진정</li>
+                  <li>안티에이징</li>
+                  <li>각질</li>
+                </ul>
+              </li>
+              <li>라인별
+                <ul class="gnb_3depth">
+                  <li>가든빈</li>
+                  <li>당근</li>
+                  <li>로열허니</li>
+                  <li>버터리</li>
+                  <li>블랙슈가</li>
+                  <li>상추오이</li>
+                  <li>라이스</li>
+                  <li>허니</li>
+                  <li>밀크쉐이크</li>
+                  <li>파인애플</li>
+                  <li>소다</li>
+                  <li>워터파슬리</li>
+                  <li>수분포도</li>
+                  <li>수비드</li>
+                  <li>골드캐비어</li>
+                  <li>아보카도</li>
+                  <li>베리</li>
+                  <li>유자</li>
+                  <li>이지드레싱</li>
+                  <li>포레스트 다이닝</li>
+                  <li>착한 라인</li>
+                  <li>청포도</li>
+                  <li>초코</li>
+                  <li>토마토</li>
+                  <li>푸드마스크</li>
+                  <li>피치뽀송</li>
+                  <li>프로폴리스</li>
+                  <li>흑석류</li>
+                  <li>베지가든</li>
+                  <li>시어버터</li>
+                  <li>쉬폰</li>
+                  <li>연어</li>
+                  <li>머쉬룸</li>
+                  <li>알로에</li>
+                  <li>레몬버베나</li>
+                  <li>트윙클쿠키</li>
+                  <li>포도씨오일</li>
+                  <li>아르간오일</li>
+                  <li>에그화이트</li>
+                </ul>
+              </li>
+              <li>타입별
+                <ul class="gnb_3depth">
+                  <li>모든피부</li>
+                  <li>건성</li>
+                  <li>복합성</li>
+                  <li>지성</li>
+                  <li>민감성</li>
+                </ul>
+              </li>
+              <li>패키지
+                <ul class="gnb_3depth">
+                  <li>기획 상품</li>
+                  <li>세트 상품</li>
+                </ul>
+              </li>
+              <li>비건</li>
+            </ul>
+          </li>
+          <li>
+            <ul class="gnb_2depth">
+              <li>진행중 이벤트</li>
+              <li>종료 이벤트</li>
+            </ul>
+          </li>
+          <li>
+            <ul class="gnb_2depth">
+              <li>리뷰</li>
+            </ul>
+          </li>
+          <li>
+            <ul class="gnb_2depth">
+              <li>멤버십</li>
+              <li>FAQ</li>
+              <li>공지사항</li>
+              <li>매장안내</li>
+              <li>1:1문의하기</li>
+            </ul>
+          </li>
+          <li>
+            <ul class="gnb_2depth">
+              <li>브랜드 스토리</li>
+              <li>스킨푸드 소식</li>
+              <li>사회 공헌</li>
+              <li>전자공고</li>
+              <li>SNS</li>
+              <li>잘버렸습니다 캠페인</li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
