--- a/index.html
+++ b/index.html
@@ -33,31 +33,15 @@
         </select>
       </div>
     </div>
-    <div class="menu">
-      <h1 class="logo">
-        <a href="./index.html">
-          <img src="./images/스킨푸드로고.png" alt="">
-        </a>
-      </h1>
-      <ul class="gnb">
-        <li><a href="">상품</a></li>
-        <li><a href="">이벤트</a></li>
-        <li><a href="">리뷰</a></li>
-        <li><a href="">커뮤니티</a></li>
-        <li><a href="">어바웃 스킨푸드</a></li>
-      </ul>
-      <div class="gnb_icon">
-        <a href="" class="search"></a>
-        <a href="" class="basket"></a>
-      </div>
-    </div>
-    <div class="smenuwrap">
-      <div class="smenu">
-        <div class="img">
-          <img src="./images/gnb_비건.jpg" alt="">
-        </div>
-        <ul class="gnb_2depth_wrap">
-          <li>
+    <div class="menuwrap">
+      <div class="menu">
+        <h1 class="logo">
+          <a href="./index.html">
+            <img src="./images/스킨푸드로고.png" alt="">
+          </a>
+        </h1>
+        <ul class="gnb">
+          <li><a href="">상품</a>
             <ul class="gnb_2depth">
               <li>베스트&신상품</li>
               <li>유형별
@@ -147,18 +131,18 @@
               <li>비건</li>
             </ul>
           </li>
-          <li>
+          <li><a href="">이벤트</a>
             <ul class="gnb_2depth">
               <li>진행중 이벤트</li>
               <li>종료 이벤트</li>
             </ul>
           </li>
-          <li>
+          <li><a href="">리뷰</a>
             <ul class="gnb_2depth">
               <li>리뷰</li>
             </ul>
           </li>
-          <li>
+          <li><a href="">커뮤니티</a>
             <ul class="gnb_2depth">
               <li>멤버십</li>
               <li>FAQ</li>
@@ -167,7 +151,7 @@
               <li>1:1문의하기</li>
             </ul>
           </li>
-          <li>
+          <li><a href="">어바웃 스킨푸드</a>
             <ul class="gnb_2depth">
               <li>브랜드 스토리</li>
               <li>스킨푸드 소식</li>
@@ -178,6 +162,17 @@
             </ul>
           </li>
         </ul>
+        <div class="gnb_icon">
+          <a href="" class="search"></a>
+          <a href="" class="basket"></a>
+        </div>
+      </div>
+    </div>
+    <div class="smenuwrap">
+      <div class="smenu">
+        <div class="img">
+          <img src="./images/gnb_비건.jpg" alt="">
+        </div>
       </div>
     </div>
   </header>
