--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         </h1>
         <ul class="gnb">
           <li><a href="">상품</a>
-            <ul class="gnb_2depth">
-              <li>베스트&신상품</li>
-              <li>유형별
+            <ul class="gnb_2depth gnb_first">
+              <li><a href="">베스트&신상품</a></li>
+              <li><a href="">유형별</a>
                 <ul class="gnb_3depth">
                   <li>스킨케어</li>
                   <li>마스크</li>
