--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   <li>미용 부자재</li>
                 </ul>
               </li>
-              <li>고민별
+              <li><a href="">고민별</a>
                 <ul class="gnb_3depth">
                   <li>브라이트닝</li>
                   <li>모공</li>
@@ -70,7 +70,7 @@
                   <li>각질</li>
                 </ul>
               </li>
-              <li>라인별
+              <li><a href="">라인별</a>
                 <ul class="gnb_3depth">
                   <li>가든빈</li>
                   <li>당근</li>
@@ -113,7 +113,7 @@
                   <li>에그화이트</li>
                 </ul>
               </li>
-              <li>타입별
+              <li><a href="">타입별</a>
                 <ul class="gnb_3depth">
                   <li>모든피부</li>
                   <li>건성</li>
@@ -122,13 +122,13 @@
                   <li>민감성</li>
                 </ul>
               </li>
-              <li>패키지
+              <li><a href="">패키지</a>
                 <ul class="gnb_3depth">
                   <li>기획 상품</li>
                   <li>세트 상품</li>
                 </ul>
               </li>
-              <li>비건</li>
+              <li><a href="">비건</a></li>
             </ul>
           </li>
           <li><a href="">이벤트</a>
