--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
     </div>
     <div class="smenuwrap">
       <div class="smenu">
-        <div class="img">
-          <img src="./images/gnb_비건.jpg" alt="">
+        <div class="bg">
+          <div class="img">
+            <img src="./images/gnb_비건.jpg" alt="">
+          </div>
         </div>
       </div>
     </div>
