--- a/index.html
+++ b/index.html
@@ -72,45 +72,46 @@
               </li>
               <li><a href="">라인별</a>
                 <ul class="gnb_3depth">
+                  <li>골드캐비어</li>
                   <li>가든빈</li>
                   <li>당근</li>
+                  <li>도토리</li>
+                  <li>라이스</li>
+                  <li>레몬버베나</li>
+                  <li>토마토</li>
+                  <li>트윙클쿠키</li>
+                  <li>파인애플</li>
+                  <li>포도씨오일</li>
+                  <li>포레스트 다이닝</li>
+                  <li>푸드마스크</li>
                   <li>로열허니</li>
+                  <li>머쉬룸</li>
+                  <li>밀크쉐이크</li>
                   <li>버터리</li>
+                  <li>베리</li>
+                  <li>베지가든</li>
+                  <li>프로폴리스</li>
+                  <li>피치뽀송</li>
+                  <li>허니</li>
+                  <li>흑석류</li>
                   <li>블랙슈가</li>
                   <li>상추오이</li>
-                  <li>라이스</li>
-                  <li>허니</li>
-                  <li>밀크쉐이크</li>
-                  <li>파인애플</li>
                   <li>소다</li>
-                  <li>워터파슬리</li>
                   <li>수분포도</li>
                   <li>수비드</li>
-                  <li>골드캐비어</li>
+                  <li>쉬폰</li>
+                  <li>시어버터</li>
+                  <li>아르간오일</li>
                   <li>아보카도</li>
-                  <li>베리</li>
+                  <li>알로에</li>
+                  <li>에그화이트</li>
+                  <li>연어</li>
+                  <li>워터파슬리</li>
                   <li>유자</li>
                   <li>이지드레싱</li>
-                  <li>포레스트 다이닝</li>
                   <li>착한 라인</li>
                   <li>청포도</li>
                   <li>초코</li>
-                  <li>토마토</li>
-                  <li>푸드마스크</li>
-                  <li>피치뽀송</li>
-                  <li>프로폴리스</li>
-                  <li>흑석류</li>
-                  <li>베지가든</li>
-                  <li>시어버터</li>
-                  <li>쉬폰</li>
-                  <li>연어</li>
-                  <li>머쉬룸</li>
-                  <li>알로에</li>
-                  <li>레몬버베나</li>
-                  <li>트윙클쿠키</li>
-                  <li>포도씨오일</li>
-                  <li>아르간오일</li>
-                  <li>에그화이트</li>
                 </ul>
               </li>
               <li><a href="">타입별</a>
@@ -133,32 +134,32 @@
           </li>
           <li><a href="">이벤트</a>
             <ul class="gnb_2depth">
-              <li>진행중 이벤트</li>
-              <li>종료 이벤트</li>
+              <li><a href="">진행중 이벤트</a></li>
+              <li><a href="">종료 이벤트</a></li>
             </ul>
           </li>
           <li><a href="">리뷰</a>
             <ul class="gnb_2depth">
-              <li>리뷰</li>
+              <li><a href="">리뷰</a></li>
             </ul>
           </li>
           <li><a href="">커뮤니티</a>
             <ul class="gnb_2depth">
-              <li>멤버십</li>
-              <li>FAQ</li>
-              <li>공지사항</li>
-              <li>매장안내</li>
-              <li>1:1문의하기</li>
+              <li><a href="">멤버십</a></li>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">공지사항</a></li>
+              <li><a href="">매장안내</a></li>
+              <li><a href="">1:1문의하기</a></li>
             </ul>
           </li>
           <li><a href="">어바웃 스킨푸드</a>
             <ul class="gnb_2depth">
-              <li>브랜드 스토리</li>
-              <li>스킨푸드 소식</li>
-              <li>사회 공헌</li>
-              <li>전자공고</li>
-              <li>SNS</li>
-              <li>잘버렸습니다 캠페인</li>
+              <li><a href="">브랜드 스토리</a></li>
+              <li><a href="">스킨푸드 소식</a></li>
+              <li><a href="">사회 공헌</a></li>
+              <li><a href="">전자공고</a></li>
+              <li><a href="">SNS</a></li>
+              <li><a href="">잘버렸습니다 캠페인</a></li>
             </ul>
           </li>
         </ul>
