--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </ul>
               </li>
               <li><a href="">라인별</a>
-                <ul class="gnb_3depth">
+                <ul class="gnb_3depth line">
                   <li>골드캐비어</li>
                   <li>가든빈</li>
                   <li>당근</li>
