--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header>
-    <div class="tmenuwrap">
+    <div class="tmenu_wrap">
       <div class="tmenu">
         <ul class="login">
           <li><a href="">로그인</a></li>
@@ -33,7 +33,7 @@
         </select>
       </div>
     </div>
-    <div class="menuwrap">
+    <div class="menu_wrap">
       <div class="menu">
         <h1 class="logo">
           <a href="./index.html">
@@ -169,18 +169,16 @@
         </div>
       </div>
     </div>
-    <div class="smenuwrap">
+    <div class="smenu_wrap">
       <div class="smenu">
-        <div class="bg">
-          <div class="img">
-            <img src="./images/gnb_비건.jpg" alt="">
-          </div>
+        <div class="img">
+          <img src="./images/gnb_비건.jpg" alt="">
         </div>
       </div>
     </div>
   </header>
   <div id="content1">
-    <ul class="mainslide">
+    <ul class="main_slide">
       <li>
         <img src="./images/content1_1.jpg" alt="">
       </li>
@@ -214,122 +212,120 @@
     <p>
       <a href=""><strong>한 눈에 보는 추천 제품</strong></a>
     </p>
-    <div class="recomcont">
-      <ul class="drgSlide">
-        <li>
-          <div class="recomtop">
-            <img src="./images/content2_1-1.jpg" alt="">
-          </div>
-          <div class="recombottom">
-            <div class="recomfirst">
-              <div class="img">
-                <img src="./images/content2_1-2-1.jpg" alt="">
-              </div>
-              <div class="txt">
-                <div class="txt1">NEW 레몬 버베나 바디 워시 (450ml)</div>
-                <div class="txt2"></div>
-                <div class="txt3">₩ 16,000</div>
-              </div>
+    <ul class="recom_slide">
+      <li>
+        <div class="recom_top">
+          <img src="./images/content2_1-1.jpg" alt="">
+        </div>
+        <div class="recom_bottom">
+          <div class="recom_bottom_cont">
+            <div class="img">
+              <img src="./images/content2_1-2-1.jpg" alt="">
             </div>
-            <div class="recomsecond">
-              <div class="img">
-                <img src="./images/content2_1-2-2.jpg" alt="">
-              </div>
-              <div class="txt">
-                <div class="txt1">허니 리치 바디 에센스 (450ml)</div>
-                <div class="txt2"></div>
-                <div class="txt3">₩ 16,000</div>
-              </div>
+            <div class="txt">
+              <div class="txt1">NEW 레몬 버베나 바디 워시 (450ml)</div>
+              <div class="txt2"></div>
+              <div class="txt3">₩ 16,000</div>
             </div>
           </div>
-        </li>
-        <li>
-          <div class="recomtop">
-            <img src="./images/content2_2-1.jpg" alt="">
-          </div>
-          <div class="recombottom">
-            <div class="recomfirst">
-              <div class="img">
-                <img src="./images/content2_2-2-1.jpg" alt="">
-              </div>
-              <div class="txt">
-                <div class="txt1">[꿀광보습]로열허니 프로폴리스 인리치 마스크(30ml)</div>
-                <div class="txt2"></div>
-                <div class="txt3">₩ 3,000</div>
-              </div>
+          <div class="recom_bottom_cont">
+            <div class="img">
+              <img src="./images/content2_1-2-2.jpg" alt="">
             </div>
-            <div class="recomsecond">
-              <div class="img">
-                <img src="./images/content2_2-2-2.jpg" alt="">
-              </div>
-              <div class="txt">
-                <div class="txt1">[수분진정] 캐롯 카로틴 마스크(당근 마스크)(27ml)</div>
-                <div class="txt2"></div>
-                <div class="txt3">₩ 3,000</div>
-              </div>
+            <div class="txt">
+              <div class="txt1">허니 리치 바디 에센스 (450ml)</div>
+              <div class="txt2"></div>
+              <div class="txt3">₩ 16,000</div>
             </div>
           </div>
-        </li>
-        <li>
-          <div class="recomtop">
-            <img src="./images/content2_3-1.jpg" alt="">
-          </div>
-          <div class="recombottom">
-            <div class="recomfirst">
-              <div class="img">
-                <img src="./images/content2_3-2-1.jpg" alt="">
-              </div>
-              <div class="txt">
-                <div class="txt1">[비건/혼합자차]NEW 베리 생기 선크림 50ml SPF50+ PA++++</div>
-                <div class="txt2">₩ 24,000</div>
-                <div class="txt3">₩ 15,600</div>
-              </div>
+        </div>
+      </li>
+      <li>
+        <div class="recom_top">
+          <img src="./images/content2_2-1.jpg" alt="">
+        </div>
+        <div class="recom_bottom">
+          <div class="recom_bottom_cont">
+            <div class="img">
+              <img src="./images/content2_2-2-1.jpg" alt="">
             </div>
-            <div class="recomsecond">
-              <div class="img">
-                <img src="./images/content2_3-2-2.jpg" alt="">
-              </div>
-              <div class="txt">
-                <div class="txt1">[비건/무기자차]NEW 베리 진정 선크림 50ml SPF50+ PA++++</div>
-                <div class="txt2">₩ 24,000</div>
-                <div class="txt3">₩ 15,600</div>
-              </div>
+            <div class="txt">
+              <div class="txt1">[꿀광보습]로열허니 프로폴리스 인리치 마스크(30ml)</div>
+              <div class="txt2"></div>
+              <div class="txt3">₩ 3,000</div>
             </div>
           </div>
-        </li>
-        <li>
-          <div class="recomtop">
-            <img src="./images/content2_4-1.jpg" alt="">
-          </div>
-          <div class="recombottom">
-            <div class="recomfirst">
-              <div class="img">
-                <img src="./images/content2_4-2-1.jpg" alt="">
-              </div>
-              <div class="txt">
-                <div class="txt1">로열허니 프로폴리스 인리치 에센스 (50ml)</div>
-                <div class="txt2">₩ 32,000</div>
-                <div class="txt3">₩ 20,800</div>
-              </div>
+          <div class="recom_bottom_cont">
+            <div class="img">
+              <img src="./images/content2_2-2-2.jpg" alt="">
             </div>
-            <div class="recomsecond">
-              <div class="img">
-                <img src="./images/content2_4-2-2.jpg" alt="">
-              </div>
-              <div class="txt">
-                <div class="txt1">로열허니 프로폴리스 인리치 크림 미스트(120ml)</div>
-                <div class="txt2"></div>
-                <div class="txt3">₩ 22,000</div>
-              </div>
+            <div class="txt">
+              <div class="txt1">[수분진정] 캐롯 카로틴 마스크(당근 마스크)(27ml)</div>
+              <div class="txt2"></div>
+              <div class="txt3">₩ 3,000</div>
             </div>
           </div>
-        </li>
-      </ul>
-    </div>
+        </div>
+      </li>
+      <li>
+        <div class="recom_top">
+          <img src="./images/content2_3-1.jpg" alt="">
+        </div>
+        <div class="recom_bottom">
+          <div class="recom_bottom_cont">
+            <div class="img">
+              <img src="./images/content2_3-2-1.jpg" alt="">
+            </div>
+            <div class="txt">
+              <div class="txt1">[비건/혼합자차]NEW 베리 생기 선크림 50ml SPF50+ PA++++</div>
+              <div class="txt2">₩ 24,000</div>
+              <div class="txt3">₩ 15,600</div>
+            </div>
+          </div>
+          <div class="recom_bottom_cont">
+            <div class="img">
+              <img src="./images/content2_3-2-2.jpg" alt="">
+            </div>
+            <div class="txt">
+              <div class="txt1">[비건/무기자차]NEW 베리 진정 선크림 50ml SPF50+ PA++++</div>
+              <div class="txt2">₩ 24,000</div>
+              <div class="txt3">₩ 15,600</div>
+            </div>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="recom_top">
+          <img src="./images/content2_4-1.jpg" alt="">
+        </div>
+        <div class="recom_bottom">
+          <div class="recom_bottom_cont">
+            <div class="img">
+              <img src="./images/content2_4-2-1.jpg" alt="">
+            </div>
+            <div class="txt">
+              <div class="txt1">로열허니 프로폴리스 인리치 에센스 (50ml)</div>
+              <div class="txt2">₩ 32,000</div>
+              <div class="txt3">₩ 20,800</div>
+            </div>
+          </div>
+          <div class="recom_bottom_cont">
+            <div class="img">
+              <img src="./images/content2_4-2-2.jpg" alt="">
+            </div>
+            <div class="txt">
+              <div class="txt1">로열허니 프로폴리스 인리치 크림 미스트(120ml)</div>
+              <div class="txt2"></div>
+              <div class="txt3">₩ 22,000</div>
+            </div>
+          </div>
+        </div>
+      </li>
+    </ul>
   </div>
   <div id="content3">
     <p>요즘 뜨는 <strong>상품</strong></p>
-    <ul class="popcont">
+    <ul class="populer_slide">
       <li>
         <div class="img">
           <img src="./images/content3_1.jpg" alt="">
@@ -500,11 +496,12 @@
       </li>
     </ul>
   </div>
+  
   <div id="content4">
     <p>
       <strong><a href="">카테고리 별 인기템</a></strong>
     </p>
-    <ul class="catitem">
+    <ul class="cat_item">
       <li>
         <img src="./images/content4_cat_1.png" alt="">
         <span>스킨케어</span>
@@ -546,7 +543,7 @@
         <span>미용 부자재</span>
       </li>
     </ul>
-    <ul class="catcont">
+    <ul class="cat_slide">
       <!-- <li>
         <div class="img">
           <img src="./images/content4_1-1.jpg" alt="">
@@ -700,37 +697,35 @@
     <p>
       <strong><a href="">포토 리뷰</a></strong>
     </p>
-    <div class="slidewrap">
-      <ul class="photoreview">
-        <li>
-          <img src="./images/content5_1.png" alt="">
-        </li>
-        <li>
-          <img src="./images/content5_2.png" alt="">
-        </li>
-        <li>
-          <img src="./images/content5_3.png" alt="">
-        </li>
-        <li>
-          <img src="./images/content5_4.png" alt="">
-        </li>
-        <li>
-          <img src="./images/content5_5.png" alt="">
-        </li>
-        <li>
-          <img src="./images/content5_6.png" alt="">
-        </li>
-        <li>
-          <img src="./images/content5_7.png" alt="">
-        </li>
-        <li>
-          <img src="./images/content5_8.png" alt="">
-        </li>
-        <li>
-          <img src="./images/content5_9.png" alt="">
-        </li>
-      </ul>
-    </div>
+    <ul class="review_slide">
+      <li>
+        <img src="./images/content5_1.png" alt="">
+      </li>
+      <li>
+        <img src="./images/content5_2.png" alt="">
+      </li>
+      <li>
+        <img src="./images/content5_3.png" alt="">
+      </li>
+      <li>
+        <img src="./images/content5_4.png" alt="">
+      </li>
+      <li>
+        <img src="./images/content5_5.png" alt="">
+      </li>
+      <li>
+        <img src="./images/content5_6.png" alt="">
+      </li>
+      <li>
+        <img src="./images/content5_7.png" alt="">
+      </li>
+      <li>
+        <img src="./images/content5_8.png" alt="">
+      </li>
+      <li>
+        <img src="./images/content5_9.png" alt="">
+      </li>
+    </ul>
   </div>
 
   <div class="banner">
@@ -755,58 +750,58 @@
       </div>
     </div>
     <div class="photo">
-      <div class="photoitem photoitem1">
+      <div class="photo_item photo_item1">
         <img src="./images/content6_1.jpg" alt="">
       </div>
-      <div class="photoitem photoitem2">
+      <div class="photo_item photo_item2">
         <img src="./images/content6_2.jpg" alt="">
       </div>
-      <div class="photoitem photoitem3">
+      <div class="photo_item photo_item3">
         <img src="./images/content6_3.jpg" alt="">
       </div>
-      <div class="photoitem photoitem4">
+      <div class="photo_item photo_item4">
         <img src="./images/content6_4.jpg" alt="">
       </div>
-      <div class="photoitem photoitem5">
+      <div class="photo_item photo_item5">
         <img src="./images/content6_5.jpg" alt="">
       </div>
-      <div class="photoitem photoitem6">
+      <div class="photo_item photo_item6">
         <img src="./images/content6_6.jpg" alt="">
       </div>
-      <div class="photoitem photoitem7">
+      <div class="photo_item photo_item7">
         <img src="./images/content6_7.jpg" alt="">
       </div>
-      <div class="photoitem photoitem8">
+      <div class="photo_item photo_item8">
         <img src="./images/content6_8.jpg" alt="">
       </div>
-      <div class="photoitem photoitem9">
+      <div class="photo_item photo_item9">
         <img src="./images/content6_9.jpg" alt="">
       </div>
-      <div class="photoitem photoitem10">
+      <div class="photo_item photo_item10">
         <img src="./images/content6_10.jpg" alt="">
       </div>
-      <div class="photoitem photoitem11">
+      <div class="photo_item photo_item11">
         <img src="./images/content6_11.jpg" alt="">
       </div>
-      <div class="photoitem photoitem12">
+      <div class="photo_item photo_item12">
         <img src="./images/content6_12.jpg" alt="">
       </div>
-      <div class="photoitem photoitem13">
+      <div class="photo_item photo_item13">
         <img src="./images/content6_13.jpg" alt="">
       </div>
-      <div class="photoitem photoitem14">
+      <div class="photo_item photo_item14">
         <img src="./images/content6_14.jpg" alt="">
       </div>
-      <div class="photoitem photoitem15">
+      <div class="photo_item photo_item15">
         <img src="./images/content6_15.jpg" alt="">
       </div>
-      <div class="photoitem photoitem16">
+      <div class="photo_item photo_item16">
         <img src="./images/content6_16.jpg" alt="">
       </div>
     </div>
   </div>
   <footer>
-    <div class="txtwrap">
+    <div class="txt_wrap">
       <div class="nav_wrap">
         <ul class="nav_txt">
           <li><a href="">공지사항</a></li>
@@ -838,9 +833,21 @@
           </div>
         </div>
         <div class="sns_txt">
-          <div class="img"></div>
-          <div class="img"></div>
-          <div class="img"></div>
+          <div class="img">
+            <a href="">
+              <img src="../images/footer_sns_유튜브.png" alt="">
+            </a>
+          </div>
+          <div class="img">
+            <a href="">
+              <img src="../images/footer_sns_페이스북.png" alt="">
+            </a>
+          </div>
+          <div class="img">
+            <a href="">
+              <img src="../images/footer_sns_인스타그램.png" alt="">
+            </a>
+          </div>
         </div>
       </div>
       <div class="copy_wrap">
