--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/slick.css">
   <link rel="stylesheet" href="./css/slick-theme.css">
+  <link rel="stylesheet" href="./css/media.css">
 
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="./js/jquery-ui.min.js"></script>
@@ -208,7 +209,7 @@
   <div class="banner">
     <img src="./images/쿠폰배너.jpg" alt="">
   </div>
-  <div id="content2">
+  <div id="content2" class="content">
     <p>
       <a href=""><strong>한 눈에 보는 추천 제품</strong></a>
     </p>
@@ -329,6 +330,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_1.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">[당근토너] 캐롯 카로틴 수딩 토너 300ml</div>
@@ -343,6 +348,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_2.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">로열허니 프로폴리스 인리치 멀티 밤(9g)</div>
@@ -357,6 +366,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_3.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">로열허니 착한 수분 크림(100ml)</div>
@@ -371,6 +384,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_4.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">[Renewal] 시어버터 퍼퓸드 핸드크림</div>
@@ -385,6 +402,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_5.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">로열허니 프로폴리스 인리치 배리어 크림 (63ml)</div>
@@ -399,6 +420,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_6.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">NEW 인텐시브 시어버터 크림 워시 (450ml)</div>
@@ -413,6 +438,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_7.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">골드 캐비어 콜라겐 플러스  아이크림 (30g)</div>
@@ -427,6 +456,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_8.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">[당근크림] 캐롯 카로틴 릴리프 크림 (70ml)</div>
@@ -441,6 +474,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_9.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">토마토 젤리 틴트 립 (4.5g)</div>
@@ -455,6 +492,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_10.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">[비건/무기자차]NEW 베리 진정 선크림 50ml SPF50+ PA++++</div>
@@ -469,6 +510,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_11.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">블랙슈가 퍼펙트 에센셜 스크럽 2X (210g)</div>
@@ -483,6 +528,10 @@
       <li>
         <div class="img">
           <img src="./images/content3_12.jpg" alt="">
+          <div class="icon_wrap">
+            <div class="wish"></div>
+            <div class="cart"></div>
+          </div>
         </div>
         <div class="txt">
           <div class="txt1">라이스 데일리 브라이트닝 마스크 워시오프(210g)</div>
@@ -497,7 +546,7 @@
     </ul>
   </div>
   
-  <div id="content4">
+  <div id="content4" class="content">
     <p>
       <strong><a href="">카테고리 별 인기템</a></strong>
     </p>
@@ -693,7 +742,7 @@
     </ul>
   </div>
 
-  <div id="content5">
+  <div id="content5" class="content">
     <p>
       <strong><a href="">포토 리뷰</a></strong>
     </p>
