--- a/index.html
+++ b/index.html
@@ -860,42 +860,44 @@
           <li><a href="">매장안내</a></li>
           <li><a href="">고객센터</a></li>
         </ul>
-        <div class="select">
-          <div class="select_btn">Global Skinfood
-            <ul class="select_list">
-              <li>US</li>
-              <li>Japan</li>
-              <li>Hong Kong</li>
-              <li>Iraq</li>
-              <li>Turkey</li>
-              <li>Vietnam</li>
-              <li>Thailand</li>
-              <li>Guatemala</li>
-              <li>Bangladesh</li>
-            </ul>
+        <div class="seletsns_wrap">
+          <div class="select">
+            <div class="select_btn">Global Skinfood
+              <ul class="select_list">
+                <li>US</li>
+                <li>Japan</li>
+                <li>Hong Kong</li>
+                <li>Iraq</li>
+                <li>Turkey</li>
+                <li>Vietnam</li>
+                <li>Thailand</li>
+                <li>Guatemala</li>
+                <li>Bangladesh</li>
+              </ul>
+            </div>
+            <div class="select_btn">Language
+              <ul class="select_list">
+                <li>KOREAN</li>
+                <li>ENGLISH</li>
+              </ul>
+            </div>
           </div>
-          <div class="select_btn">Language
-            <ul class="select_list">
-              <li>KOREAN</li>
-              <li>ENGLISH</li>
-            </ul>
-          </div>
-        </div>
-        <div class="sns_txt">
-          <div class="img">
-            <a href="">
-              <img src="../images/footer_sns_유튜브.png" alt="">
-            </a>
-          </div>
-          <div class="img">
-            <a href="">
-              <img src="../images/footer_sns_페이스북.png" alt="">
-            </a>
-          </div>
-          <div class="img">
-            <a href="">
-              <img src="../images/footer_sns_인스타그램.png" alt="">
-            </a>
+          <div class="sns_txt">
+            <div class="img">
+              <a href="">
+                <img src="../images/footer_sns_유튜브.png" alt="">
+              </a>
+            </div>
+            <div class="img">
+              <a href="">
+                <img src="../images/footer_sns_페이스북.png" alt="">
+              </a>
+            </div>
+            <div class="img">
+              <a href="">
+                <img src="../images/footer_sns_인스타그램.png" alt="">
+              </a>
+            </div>
           </div>
         </div>
       </div>
