--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
     <img src="./images/쿠폰배너.jpg" alt="">
   </div>
   <div id="content2" class="content">
-    <p>
+    <p class="scroll">
       <a href=""><strong>한 눈에 보는 추천 제품</strong></a>
     </p>
-    <ul class="recom_slide">
+    <ul class="recom_slide scroll">
       <li>
         <div class="recom_top">
           <img src="./images/content2_1-1.jpg" alt="">
@@ -325,8 +325,8 @@
     </ul>
   </div>
   <div id="content3">
-    <p>요즘 뜨는 <strong>상품</strong></p>
-    <ul class="populer_slide">
+    <p class="scroll">요즘 뜨는 <strong>상품</strong></p>
+    <ul class="populer_slide scroll">
       <li>
         <div class="img">
           <img src="./images/content3_1.jpg" alt="">
@@ -547,10 +547,10 @@
   </div>
   
   <div id="content4" class="content">
-    <p>
+    <p class="scroll">
       <strong><a href="">카테고리 별 인기템</a></strong>
     </p>
-    <ul class="cat_item">
+    <ul class="cat_item scroll">
       <li>
         <img src="./images/content4_cat_1.png" alt="">
         <span>스킨케어</span>
@@ -592,7 +592,7 @@
         <span>미용 부자재</span>
       </li>
     </ul>
-    <ul class="cat_slide">
+    <ul class="cat_slide scroll">
       <!-- <li>
         <div class="img">
           <img src="./images/content4_1-1.jpg" alt="">
@@ -743,10 +743,10 @@
   </div>
 
   <div id="content5" class="content">
-    <p>
+    <p class="scroll">
       <strong><a href="">포토 리뷰</a></strong>
     </p>
-    <ul class="review_slide">
+    <ul class="review_slide scroll">
       <li>
         <img src="./images/content5_1.png" alt="">
       </li>
@@ -925,5 +925,8 @@
       </div>
     </div>
   </footer>
+  <div class="top_btn">
+    맨위로
+  </div>
 </body>
 </html>
