미디어쿼리

--- a/index.html
+++ b/index.html
@@ -177,7 +177,15 @@
         </div>
       </div>
     </div>
+    <ul class="mgnb">
+      <li><a href="">홈</a></li>
+      <li><a href="">베스트&신제품</a></li>
+      <li><a href="">이벤트</a></li>
+      <li><a href="">리뷰</a></li>
+      <li><a href="">어바웃 스킨푸드</a></li>
+    </ul>
   </header>
+
   <div id="content1">
     <ul class="main_slide">
       <li>
