미디어쿼리

--- a/index.html
+++ b/index.html
@@ -186,32 +186,34 @@
     </ul>
   </header>
 
+  <ul class="mquick">
+    <li><a href="">홈</a></li>
+    <li><a href="">카테고리</a></li>
+    <li><a href="">마이페이지</a></li>
+    <li><a href="">멤버십</a></li>
+    <li><a href="">최근본상품</a></li>
+  </ul>
+
   <div id="content1">
     <ul class="main_slide">
-      <li>
-        <img src="./images/content1_1.jpg" alt="">
-      </li>
-      <li>
-        <img src="./images/content1_2.jpg" alt="">
-      </li>
-      <li>
-        <img src="./images/content1_3.jpg" alt="">
-      </li>
-      <li>
-        <img src="./images/content1_4.jpg" alt="">
-      </li>
-      <li>
-        <img src="./images/content1_5.jpg" alt="">
-      </li>
-      <li>
-        <img src="./images/content1_6.jpg" alt="">
-      </li>
-      <li>
-        <img src="./images/content1_7.jpg" alt="">
-      </li>
-      <li>
-        <img src="./images/content1_8.jpg" alt="">
-      </li>
+      <li><img src="./images/content1_1.jpg" alt=""></li>
+      <li><img src="./images/content1_2.jpg" alt=""></li>
+      <li><img src="./images/content1_3.jpg" alt=""></li>
+      <li><img src="./images/content1_4.jpg" alt=""></li>
+      <li><img src="./images/content1_5.jpg" alt=""></li>
+      <li><img src="./images/content1_6.jpg" alt=""></li>
+      <li><img src="./images/content1_7.jpg" alt=""></li>
+      <li><img src="./images/content1_8.jpg" alt=""></li>
+    </ul>
+    <ul class="main_slide_mobile">
+      <li><img src="./images/content1_1_mobile.jpg" alt=""></li>
+      <li><img src="./images/content1_2_mobile.jpg" alt=""></li>
+      <li><img src="./images/content1_3_mobile.jpg" alt=""></li>
+      <li><img src="./images/content1_4_mobile.jpg" alt=""></li>
+      <li><img src="./images/content1_5_mobile.jpg" alt=""></li>
+      <li><img src="./images/content1_6_mobile.jpg" alt=""></li>
+      <li><img src="./images/content1_7_mobile.jpg" alt=""></li>
+      <li><img src="./images/content1_8_mobile.jpg" alt=""></li>
     </ul>
   </div>
   <div class="banner">
@@ -287,8 +289,8 @@
             </div>
             <div class="txt">
               <div class="txt1">[비건/혼합자차]NEW 베리 생기 선크림 50ml SPF50+ PA++++</div>
-              <div class="txt2">₩ 24,000</div>
-              <div class="txt3">₩ 15,600</div>
+              <div class="txt2"></div>
+              <div class="txt3">₩ 24,000</div>
             </div>
           </div>
           <div class="recom_bottom_cont">
@@ -297,8 +299,8 @@
             </div>
             <div class="txt">
               <div class="txt1">[비건/무기자차]NEW 베리 진정 선크림 50ml SPF50+ PA++++</div>
-              <div class="txt2">₩ 24,000</div>
-              <div class="txt3">₩ 15,600</div>
+              <div class="txt2"></div>
+              <div class="txt3">₩ 24,000</div>
             </div>
           </div>
         </div>
@@ -314,8 +316,8 @@
             </div>
             <div class="txt">
               <div class="txt1">로열허니 프로폴리스 인리치 에센스 (50ml)</div>
-              <div class="txt2">₩ 32,000</div>
-              <div class="txt3">₩ 20,800</div>
+              <div class="txt2"></div>
+              <div class="txt3">₩ 32,000</div>
             </div>
           </div>
           <div class="recom_bottom_cont">
@@ -755,33 +757,26 @@
       <strong><a href="">포토 리뷰</a></strong>
     </p>
     <ul class="review_slide scroll">
-      <li>
-        <img src="./images/content5_1.png" alt="">
-      </li>
-      <li>
-        <img src="./images/content5_2.png" alt="">
-      </li>
-      <li>
-        <img src="./images/content5_3.png" alt="">
-      </li>
-      <li>
-        <img src="./images/content5_4.png" alt="">
-      </li>
-      <li>
-        <img src="./images/content5_5.png" alt="">
-      </li>
-      <li>
-        <img src="./images/content5_6.png" alt="">
-      </li>
-      <li>
-        <img src="./images/content5_7.png" alt="">
-      </li>
-      <li>
-        <img src="./images/content5_8.png" alt="">
-      </li>
-      <li>
-        <img src="./images/content5_9.png" alt="">
-      </li>
+      <li><img src="./images/content5_1.png" alt=""></li>
+      <li><img src="./images/content5_2.png" alt=""></li>
+      <li><img src="./images/content5_3.png" alt=""></li>
+      <li><img src="./images/content5_4.png" alt=""></li>
+      <li><img src="./images/content5_5.png" alt=""></li>
+      <li><img src="./images/content5_6.png" alt=""></li>
+      <li><img src="./images/content5_7.png" alt=""></li>
+      <li><img src="./images/content5_8.png" alt=""></li>
+      <li><img src="./images/content5_9.png" alt=""></li>
+    </ul>
+    <ul class="review_slide_mobile scroll">
+      <li><img src="./images/content5_1_mobile.png" alt=""></li>
+      <li><img src="./images/content5_2_mobile.png" alt=""></li>
+      <li><img src="./images/content5_3_mobile.png" alt=""></li>
+      <li><img src="./images/content5_4_mobile.png" alt=""></li>
+      <li><img src="./images/content5_5_mobile.png" alt=""></li>
+      <li><img src="./images/content5_6_mobile.png" alt=""></li>
+      <li><img src="./images/content5_7_mobile.png" alt=""></li>
+      <li><img src="./images/content5_8_mobile.png" alt=""></li>
+      <li><img src="./images/content5_9_mobile.png" alt=""></li>
     </ul>
   </div>
 
@@ -927,14 +922,19 @@
         <div class="cs_txt">
           <p class="cs_txt1">고객센터</p>
           <p class="cs_txt2">080-012-7878</p>
-          <p class="cs_txt3">평일 09:00 ~ 17:00</p>
-          <p class="cs_txt4">점심시간 11:30 ~ 12:30</p>
+          <div class="cs_txt_wrap">
+            <p class="cs_txt3">평일 09:00 ~ 17:00</p>
+            <p class="cs_txt4">점심시간 11:30 ~ 12:30</p>
+          </div>
         </div>
       </div>
     </div>
   </footer>
+  <div class="empty"></div>
+
   <div class="top_btn">
     맨위로
   </div>
+
 </body>
 </html>
