--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     </ul>
   </div>
   <div id="content3">
-    <p class="scroll">요즘 뜨는 <strong>상품</strong></p>
+    <p class="scroll"><a href="">요즘 뜨는 <strong>상품</strong></a></p>
     <ul class="populer_slide scroll">
       <li>
         <div class="img">
@@ -798,7 +798,7 @@
         <div class="profile_use">@skinfood_official</div>
       </div>
       <div class="follow">
-        <a href="">Follow</a>
+        <a href="https://www.instagram.com/skinfood_official/" target="_blank">Follow</a>
       </div>
     </div>
     <div class="photo">
@@ -887,17 +887,17 @@
           </div>
           <div class="sns_txt">
             <div class="img">
-              <a href="">
+              <a href="https://www.youtube.com/channel/UCKyIfDxlcdTBhUzv_RsuR-g" target="_blank">
                 <img src="../images/footer_sns_유튜브.png" alt="">
               </a>
             </div>
             <div class="img">
-              <a href="">
+              <a href="https://www.facebook.com/theskinfood.kr" target="_blank">
                 <img src="../images/footer_sns_페이스북.png" alt="">
               </a>
             </div>
             <div class="img">
-              <a href="">
+              <a href="https://www.instagram.com/skinfood_official/" target="_blank">
                 <img src="../images/footer_sns_인스타그램.png" alt="">
               </a>
             </div>
@@ -919,6 +919,22 @@
           <li class="first">국내영업 문의 hjimp@theskinfood.com</li>
           <li>해외영업 문의 overseas@theskinfood.com</li>
         </ul>
+        <ul class="copy_txt_mobile">
+          <li>상호 (주)스킨푸드 | 대표이사 구도곤</li>
+          <li>Tel 080-012-7878 | Fax 02-597-4199</li>
+          <li>주소 경기도 안성시 미양면 제2공단1길 104 스킨푸드</li>
+          <li>사업자등록번호 125-81-54503</li>
+          <li>통신사업자번호 제2005-00050호</li>
+          <li>개인정보 보호 책임자 옥봉근</li>
+          <li>제휴문의 webmaster@theskinfood.com</li>
+          <li>마케팅제휴문의 sf_mkt@theskinfood.com</li>
+          <li>국내영업 문의 hjimp@theskinfood.com</li>
+          <li>해외영업 문의 overseas@theskinfood.com</li>
+        </ul>
+        <div class="lang_mobile">
+          <span><strong>KOREAN</strong></span>
+          <span>ENGLISH</span>
+        </div>
         <div class="cs_txt">
           <p class="cs_txt1">고객센터</p>
           <p class="cs_txt2">080-012-7878</p>
