로그인페이지

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="tmenu_wrap">
       <div class="tmenu">
         <ul class="login">
-          <li><a href="">로그인</a></li>
+          <li><a href="./login.html">로그인</a></li>
           <li><a href="">회원가입</a></li>
           <li><a href="">마이페이지</a></li>
           <li><a href="">멤버십</a></li>
@@ -38,7 +38,7 @@
       <div class="menu">
         <h1 class="logo">
           <a href="./index.html">
-            <img src="./images/스킨푸드로고.png" alt="">
+            <img src="./images/스킨푸드로고.png" alt="스킨푸드로고">
           </a>
         </h1>
         <ul class="gnb">
