--- a/login.html
+++ b/login.html
@@ -8,6 +8,10 @@
 
   <link rel="stylesheet" href="./css/login.css">
 
+  <script src="./js/jquery-3.6.0.min.js"></script>
+  <script src="./js/jquery-ui.min.js"></script>
+  <script src="./js/login.js"></script>
+
 </head>
 <body>
   <header>
