--- a/login.html
+++ b/login.html
@@ -37,11 +37,11 @@
   <section class="login_member">
     <ul class="tabmenu">
       <li>기존 회원이세요?</li>
-      <li class="active">비회원 배송조회</li>
+      <li>비회원 배송조회</li>
     </ul>
     <div class="form">
-      <input type="text" placeholder="주문자명">
-      <input type="text" placeholder="주문번호">
+      <input type="text" placeholder="">
+      <input type="text" placeholder="">
     </div>
     <div class="submit">확인</div>
   </section>
