--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/slick.css">
   <link rel="stylesheet" href="./css/slick-theme.css">
-  <link rel="stylesheet" href="./css/media.css">
+  <link rel="stylesheet" href="./css/main_media.css">
 
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="./js/jquery-ui.min.js"></script>
@@ -852,6 +852,7 @@
       </div>
     </div>
   </div>
+
   <footer>
     <div class="txt_wrap">
       <div class="nav_wrap">
@@ -951,6 +952,5 @@
   <div class="top_btn">
     맨위로
   </div>
-
 </body>
 </html>
