--- a/faq.html
+++ b/faq.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>공지사항</title>
+  <title>FAQ</title>
 
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/board.css">
+  <link rel="stylesheet" href="./css/faq.css">
 
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="./js/jquery-ui.min.js"></script>
-  <script src="./js/board.js"></script>
+  <script src="./js/faq.js"></script>
   
 </head>
 <body>
@@ -186,7 +186,80 @@
 
 
 
+
+  <div class="faq_wrap">
+    <ul class="cat_depth">
+      <li><a href="">HOME</a></li>
+      <li>고객센터</li>
+      <li>FAQ</li>
+    </ul>
+    <div class="content_wrap">
+      <div class="side_wrap">
+        <h2 class="title">고객센터</h2>
+        <ul class="list">
+          <li>FAQ</li>
+          <li>공지사항</li>
+          <li>매장안내</li>
+          <li>1:1문의하기</li>
+        </ul>
+        <div class="info">
+          <p class="info_num">080-012-7878</p>
+          <p class="info_cs">
+            AM 09:00 - PM 17:00<br>
+            (점심시간 11:30 - 12:30)<br>
+            DAY OFF (토/일/공휴일 휴무)
+          </p>
+          <div class="inq_btn">
+            1:1문의하기
+          </div>
+        </div>
+      </div>
+      <div class="board_wrap">
+        <h3 class="title">FAQ</h3>
+        <div class="search">
+          <input type="text" placeholder="">
+        </div>
+        <p class="inq">찾으시는 질문이 없나요? <strong>1:1문의하기</strong></p>
+        <ul class="tab">
+          <li class="active">전체보기</li>
+          <li>상품</li>
+          <li>주문/결제/배송</li>
+          <li>이벤트/쿠폰</li>
+          <li>회원정보/멤버십</li>
+          <li>기타</li>
+          <li>사이트이용</li>
+        </ul>
+        <ul class="board_list">
+          <li>
+            <div class="board_title"><span class="board_cat">[회원정보/멤버십]</span>포인트 유효기간은 어떻게 되나요?
+              <div class="board_answer">포인트 유효기간은 해당 포인트가 적립된 날로부터 1년 후 소멸됩니다.<br>
+                이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.
+              </div>
+            </div>
+            <div class="board_btn"></div>
+            <!-- <span class="board_title"><span class="board_cat">[회원정보/멤버십]</span> 포인트 유효기간은 어떻게 되나요?</span>
+            <span class="board_answer">포인트 유효기간은 해당 포인트가 적립된 날로부터 1년 후 소멸됩니다.<br>
+              이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.</span>
+            <span class="board_btn"></span> -->
+          </li>
+          <li>
+            <div class="board_title"><span  class="board_cat">[이벤트/쿠폰]</span> 포인트 소멸기간이 있나요?
+              <div class="board_answer">포인트 유효기간은 해당 포인트가 적립된 날로부터 1년 후 소멸됩니다.<br>
+                이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="board_title"><span>[주문/결제/배송]</span> 배송일은 얼마나 걸리나요?
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   
+
+
 
   <footer>
     <div class="txt_wrap">
