--- a/faq.html
+++ b/faq.html
@@ -231,7 +231,7 @@
         </ul>
         <ul class="board_list">
           <li>
-            <div class="board_title"><span class="board_cat">[회원정보/멤버십]</span>포인트 유효기간은 어떻게 되나요?
+            <div class="board_title"><span class="board_cat">[회원정보/멤버십]</span> 포인트 유효기간은 어떻게 되나요?
               <div class="board_answer">포인트 유효기간은 해당 포인트가 적립된 날로부터 1년 후 소멸됩니다.<br>
                 이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.
               </div>
@@ -248,10 +248,14 @@
                 이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.
               </div>
             </div>
+            <div class="board_btn"></div>
           </li>
           <li>
             <div class="board_title"><span>[주문/결제/배송]</span> 배송일은 얼마나 걸리나요?
+              <div class="board_answer">상품 발송 후 택배사 영업일 기준 평균 2~4일(주말/ 공휴일/명절연휴 제외) 이내에 배송되며, 제주도 및 도서산간 등 일부 지역은 배송기간이 더 소요될 수 있습니다.<br>
+                (할인 행사 기간내 주문건 증가 시 배송이 다소 지연될 수 있습니다.)</div>
             </div>
+            <div class="board_btn"></div>
           </li>
         </ul>
       </div>
