--- a/faq.html
+++ b/faq.html
@@ -221,7 +221,7 @@
         </div>
         <p class="inq">찾으시는 질문이 없나요? <strong>1:1문의하기</strong></p>
         <ul class="tab">
-          <li class="active">전체보기</li>
+          <li>전체보기</li>
           <li>상품</li>
           <li>주문/결제/배송</li>
           <li>이벤트/쿠폰</li>
@@ -229,18 +229,15 @@
           <li>기타</li>
           <li>사이트이용</li>
         </ul>
+        
         <ul class="board_list">
-          <li>
+          <!-- <li>
             <div class="board_title"><span class="board_cat">[회원정보/멤버십]</span> 포인트 유효기간은 어떻게 되나요?
               <div class="board_answer">포인트 유효기간은 해당 포인트가 적립된 날로부터 1년 후 소멸됩니다.<br>
                 이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.
               </div>
             </div>
             <div class="board_btn"></div>
-            <!-- <span class="board_title"><span class="board_cat">[회원정보/멤버십]</span> 포인트 유효기간은 어떻게 되나요?</span>
-            <span class="board_answer">포인트 유효기간은 해당 포인트가 적립된 날로부터 1년 후 소멸됩니다.<br>
-              이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.</span>
-            <span class="board_btn"></span> -->
           </li>
           <li>
             <div class="board_title"><span  class="board_cat">[이벤트/쿠폰]</span> 포인트 소멸기간이 있나요?
@@ -256,7 +253,7 @@
                 (할인 행사 기간내 주문건 증가 시 배송이 다소 지연될 수 있습니다.)</div>
             </div>
             <div class="board_btn"></div>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
