--- a/faq.html
+++ b/faq.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/faq.css">
+  <link rel="stylesheet" href="./css/faq_media.css">
 
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="./js/jquery-ui.min.js"></script>
