미디어쿼리

--- a/faq.html
+++ b/faq.html
@@ -34,6 +34,12 @@
     </div>
     <div class="menu_wrap">
       <div class="menu">
+        <div class="mobile_back_icon">
+          <a href=""></a>
+        </div>
+        <div class="mobile_gnb_btn">
+          FAQ
+        </div>
         <h1 class="logo">
           <a href="./index.html">
             <img src="./images/스킨푸드로고.png" alt="스킨푸드로고">
