미디어쿼리

--- a/faq.html
+++ b/faq.html
@@ -236,6 +236,16 @@
           <li>기타</li>
           <li>사이트이용</li>
         </ul>
+        <select class="mobile_tab">
+          <option value="" selected disabled hidden>- 분류선택 -</option>
+          <option value="전체보기">전체보기</option>
+          <option value="상품">상품</option>
+          <option value="주문/결제/배송">주문/결제/배송</option>
+          <option value="이벤트/쿠폰">이벤트/쿠폰</option>
+          <option value="회원정보/멤버십">회원정보/멤버십</option>
+          <option value="기타">기타</option>
+          <option value="사이트이용">사이트이용</option>
+        </select>
         
         <ul class="board_list">
           <!-- <li>
