--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="login">
           <li><a href="./login.html">로그인</a></li>
           <li><a href="">회원가입</a></li>
-          <li><a href="">마이페이지</a></li>
+          <li><a href="./login.html">마이페이지</a></li>
           <li><a href="">멤버십</a></li>
           <li><a href="">고객센터</a></li>
         </ul>
@@ -147,10 +147,10 @@
           <li><a href="">커뮤니티</a>
             <ul class="gnb_2depth">
               <li><a href="">멤버십</a></li>
-              <li><a href="">FAQ</a></li>
+              <li><a href="./faq.html">FAQ</a></li>
               <li><a href="">공지사항</a></li>
               <li><a href="">매장안내</a></li>
-              <li><a href="">1:1문의하기</a></li>
+              <li><a href="./login.html">1:1문의하기</a></li>
             </ul>
           </li>
           <li><a href="">어바웃 스킨푸드</a>
@@ -178,7 +178,7 @@
       </div>
     </div>
     <ul class="mgnb">
-      <li><a href="">홈</a></li>
+      <li><a href="./index.html">홈</a></li>
       <li><a href="">베스트&신제품</a></li>
       <li><a href="">이벤트</a></li>
       <li><a href="">리뷰</a></li>
@@ -187,9 +187,9 @@
   </header>
 
   <ul class="mquick">
-    <li><a href="">홈</a></li>
+    <li><a href="./index.html">홈</a></li>
     <li><a href="">카테고리</a></li>
-    <li><a href="">마이페이지</a></li>
+    <li><a href="./login.html">마이페이지</a></li>
     <li><a href="">멤버십</a></li>
     <li><a href="">최근본상품</a></li>
   </ul>
