--- a/login.html
+++ b/login.html
@@ -16,7 +16,9 @@
 <body>
   <header>
     <div class="back_btn">
-      뒤로가기
+      <a href="./index.html">
+        뒤로가기
+      </a>
     </div>
     <div class="shopname">
       <a href="./index.html">
