--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
         <ul class="login">
           <li><a href="./login.html">로그인</a></li>
           <li><a href="">회원가입</a></li>
-          <li><a href="">마이페이지</a></li>
+          <li><a href="./login.html">마이페이지</a></li>
           <li><a href="">멤버십</a></li>
           <li><a href="">고객센터</a></li>
         </ul>
@@ -34,10 +34,8 @@
     </div>
     <div class="menu_wrap">
       <div class="menu">
-        <div class="mobile_back_icon">
-          <a href=""></a>
-        </div>
-        <div class="mobile_gnb_btn">
+        <a class="mobile_back_icon" href="./index.html"></a>
+        <div class="mobile_nav_btn">
           FAQ
         </div>
         <h1 class="logo">
@@ -151,10 +149,10 @@
           <li><a href="">커뮤니티</a>
             <ul class="gnb_2depth">
               <li><a href="">멤버십</a></li>
-              <li><a href="">FAQ</a></li>
+              <li><a href="./faq.html">FAQ</a></li>
               <li><a href="">공지사항</a></li>
               <li><a href="">매장안내</a></li>
-              <li><a href="">1:1문의하기</a></li>
+              <li><a href="./login.html">1:1문의하기</a></li>
             </ul>
           </li>
           <li><a href="">어바웃 스킨푸드</a>
@@ -183,20 +181,24 @@
     </div>
   </header>
 
+  <ul class="mobile_nav">
+    <li>고객센터</li>
+    <li><a href="./faq.html">FAQ</a></li>
+    <li><a href="">공지사항</a></li>
+    <li><a href="">매장안내</a></li>
+  </ul>
+
   <ul class="mquick">
-    <li><a href="">홈</a></li>
+    <li><a href="./index.html">홈</a></li>
     <li><a href="">카테고리</a></li>
-    <li><a href="">마이페이지</a></li>
+    <li><a href="./login.html">마이페이지</a></li>
     <li><a href="">멤버십</a></li>
     <li><a href="">최근본상품</a></li>
   </ul>
 
-
-
-
   <div class="faq_wrap">
     <ul class="cat_depth">
-      <li><a href="">HOME</a></li>
+      <li><a href="./index.html">HOME</a></li>
       <li>고객센터</li>
       <li>FAQ</li>
     </ul>
@@ -204,10 +206,10 @@
       <div class="side_wrap">
         <h2 class="title">고객센터</h2>
         <ul class="list">
-          <li>FAQ</li>
-          <li>공지사항</li>
-          <li>매장안내</li>
-          <li>1:1문의하기</li>
+          <li><a href="./faq.html">FAQ</a></li>
+          <li><a href="">공지사항</a></li>
+          <li><a href="">매장안내</a></li>
+          <li><a href="./login.html">1:1문의하기</a></li>
         </ul>
         <div class="info">
           <p class="info_num">080-012-7878</p>
@@ -217,16 +219,18 @@
             DAY OFF (토/일/공휴일 휴무)
           </p>
           <div class="inq_btn">
-            1:1문의하기
+            <a href="./login.html">
+              1:1문의하기
+            </a>
           </div>
         </div>
       </div>
       <div class="board_wrap">
         <h3 class="title">FAQ</h3>
         <div class="search">
-          <input type="text" placeholder="">
+          <input type="text">
         </div>
-        <p class="inq">찾으시는 질문이 없나요? <strong>1:1문의하기</strong></p>
+        <p class="inq">찾으시는 질문이 없나요? <a href="./login.html"><strong>1:1문의하기</strong></a></p>
         <ul class="tab">
           <li>전체보기</li>
           <li>상품</li>
@@ -246,39 +250,12 @@
           <option value="기타">기타</option>
           <option value="사이트이용">사이트이용</option>
         </select>
-        
         <ul class="board_list">
-          <!-- <li>
-            <div class="board_title"><span class="board_cat">[회원정보/멤버십]</span> 포인트 유효기간은 어떻게 되나요?
-              <div class="board_answer">포인트 유효기간은 해당 포인트가 적립된 날로부터 1년 후 소멸됩니다.<br>
-                이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.
-              </div>
-            </div>
-            <div class="board_btn"></div>
-          </li>
-          <li>
-            <div class="board_title"><span  class="board_cat">[이벤트/쿠폰]</span> 포인트 소멸기간이 있나요?
-              <div class="board_answer">포인트 유효기간은 해당 포인트가 적립된 날로부터 1년 후 소멸됩니다.<br>
-                이메일 수신 허용 고객에 한하여 소멸일 기준으로 약 한달 전 소멸 포인트 안내 이메일이 발송됩니다.
-              </div>
-            </div>
-            <div class="board_btn"></div>
-          </li>
-          <li>
-            <div class="board_title"><span>[주문/결제/배송]</span> 배송일은 얼마나 걸리나요?
-              <div class="board_answer">상품 발송 후 택배사 영업일 기준 평균 2~4일(주말/ 공휴일/명절연휴 제외) 이내에 배송되며, 제주도 및 도서산간 등 일부 지역은 배송기간이 더 소요될 수 있습니다.<br>
-                (할인 행사 기간내 주문건 증가 시 배송이 다소 지연될 수 있습니다.)</div>
-            </div>
-            <div class="board_btn"></div>
-          </li> -->
         </ul>
       </div>
     </div>
   </div>
   
-
-
-
   <footer>
     <div class="txt_wrap">
       <div class="nav_wrap">
