--- a/faq.html
+++ b/faq.html
@@ -21,10 +21,10 @@
       <div class="tmenu">
         <ul class="login">
           <li><a href="./login.html">로그인</a></li>
-          <li><a href="">회원가입</a></li>
+          <li><a href="javascript:;">회원가입</a></li>
           <li><a href="./login.html">마이페이지</a></li>
-          <li><a href="">멤버십</a></li>
-          <li><a href="">고객센터</a></li>
+          <li><a href="javascript:;">멤버십</a></li>
+          <li><a href="javascript:;">고객센터</a></li>
         </ul>
         <select id="lang">
           <option>KOREAN</option>
@@ -44,10 +44,10 @@
           </a>
         </h1>
         <ul class="gnb">
-          <li><a href="">상품</a>
+          <li><a href="javascript:;">상품</a>
             <ul class="gnb_2depth gnb_first">
-              <li><a href="">베스트&신상품</a></li>
-              <li><a href="">유형별</a>
+              <li><a href="javascript:;">베스트&신상품</a></li>
+              <li><a href="javascript:;">유형별</a>
                 <ul class="gnb_3depth">
                   <li>스킨케어</li>
                   <li>마스크</li>
@@ -61,7 +61,7 @@
                   <li>미용 부자재</li>
                 </ul>
               </li>
-              <li><a href="">고민별</a>
+              <li><a href="javascript:;">고민별</a>
                 <ul class="gnb_3depth">
                   <li>브라이트닝</li>
                   <li>모공</li>
@@ -73,7 +73,7 @@
                   <li>각질</li>
                 </ul>
               </li>
-              <li><a href="">라인별</a>
+              <li><a href="javascript:;">라인별</a>
                 <ul class="gnb_3depth line">
                   <li>골드캐비어</li>
                   <li>가든빈</li>
@@ -117,7 +117,7 @@
                   <li>초코</li>
                 </ul>
               </li>
-              <li><a href="">타입별</a>
+              <li><a href="javascript:;">타입별</a>
                 <ul class="gnb_3depth">
                   <li>모든피부</li>
                   <li>건성</li>
@@ -126,49 +126,49 @@
                   <li>민감성</li>
                 </ul>
               </li>
-              <li><a href="">패키지</a>
+              <li><a href="javascript:;">패키지</a>
                 <ul class="gnb_3depth">
                   <li>기획 상품</li>
                   <li>세트 상품</li>
                 </ul>
               </li>
-              <li><a href="">비건</a></li>
+              <li><a href="javascript:;">비건</a></li>
             </ul>
           </li>
-          <li><a href="">이벤트</a>
+          <li><a href="javascript:;">이벤트</a>
             <ul class="gnb_2depth">
-              <li><a href="">진행중 이벤트</a></li>
-              <li><a href="">종료 이벤트</a></li>
+              <li><a href="javascript:;">진행중 이벤트</a></li>
+              <li><a href="javascript:;">종료 이벤트</a></li>
             </ul>
           </li>
-          <li><a href="">리뷰</a>
+          <li><a href="javascript:;">리뷰</a>
             <ul class="gnb_2depth">
-              <li><a href="">리뷰</a></li>
+              <li><a href="javascript:;">리뷰</a></li>
             </ul>
           </li>
-          <li><a href="">커뮤니티</a>
+          <li><a href="javascript:;">커뮤니티</a>
             <ul class="gnb_2depth">
-              <li><a href="">멤버십</a></li>
+              <li><a href="javascript:;">멤버십</a></li>
               <li><a href="./faq.html">FAQ</a></li>
-              <li><a href="">공지사항</a></li>
-              <li><a href="">매장안내</a></li>
+              <li><a href="javascript:;">공지사항</a></li>
+              <li><a href="javascript:;">매장안내</a></li>
               <li><a href="./login.html">1:1문의하기</a></li>
             </ul>
           </li>
-          <li><a href="">어바웃 스킨푸드</a>
+          <li><a href="javascript:;">어바웃 스킨푸드</a>
             <ul class="gnb_2depth">
-              <li><a href="">브랜드 스토리</a></li>
-              <li><a href="">스킨푸드 소식</a></li>
-              <li><a href="">사회 공헌</a></li>
-              <li><a href="">전자공고</a></li>
-              <li><a href="">SNS</a></li>
-              <li><a href="">잘버렸습니다 캠페인</a></li>
+              <li><a href="javascript:;">브랜드 스토리</a></li>
+              <li><a href="javascript:;">스킨푸드 소식</a></li>
+              <li><a href="javascript:;">사회 공헌</a></li>
+              <li><a href="javascript:;">전자공고</a></li>
+              <li><a href="javascript:;">SNS</a></li>
+              <li><a href="javascript:;">잘버렸습니다 캠페인</a></li>
             </ul>
           </li>
         </ul>
         <div class="gnb_icon">
-          <a href="" class="search"></a>
-          <a href="" class="basket"></a>
+          <a href="javascript:;" class="search"></a>
+          <a href="javascript:;" class="basket"></a>
         </div>
       </div>
     </div>
@@ -184,16 +184,16 @@
   <ul class="mobile_nav">
     <li>고객센터</li>
     <li><a href="./faq.html">FAQ</a></li>
-    <li><a href="">공지사항</a></li>
-    <li><a href="">매장안내</a></li>
+    <li><a href="javascript:;">공지사항</a></li>
+    <li><a href="javascript:;">매장안내</a></li>
   </ul>
 
   <ul class="mquick">
     <li><a href="./index.html">홈</a></li>
-    <li><a href="">카테고리</a></li>
+    <li><a href="javascript:;">카테고리</a></li>
     <li><a href="./login.html">마이페이지</a></li>
-    <li><a href="">멤버십</a></li>
-    <li><a href="">최근본상품</a></li>
+    <li><a href="javascript:;">멤버십</a></li>
+    <li><a href="javascript:;">최근본상품</a></li>
   </ul>
 
   <div class="faq_wrap">
@@ -207,8 +207,8 @@
         <h2 class="title">고객센터</h2>
         <ul class="list">
           <li><a href="./faq.html">FAQ</a></li>
-          <li><a href="">공지사항</a></li>
-          <li><a href="">매장안내</a></li>
+          <li><a href="javascript:;">공지사항</a></li>
+          <li><a href="javascript:;">매장안내</a></li>
           <li><a href="./login.html">1:1문의하기</a></li>
         </ul>
         <div class="info">
@@ -260,12 +260,12 @@
     <div class="txt_wrap">
       <div class="nav_wrap">
         <ul class="nav_txt">
-          <li><a href="">공지사항</a></li>
-          <li><a href="">이용약관</a></li>
-          <li><a href=""><b>개인정보처리방침</b></a></li>
-          <li><a href="">영상정보처리방침</a></li>
-          <li><a href="">매장안내</a></li>
-          <li><a href="">고객센터</a></li>
+          <li><a href="javascript:;">공지사항</a></li>
+          <li><a href="javascript:;">이용약관</a></li>
+          <li><a href="javascript:;"><b>개인정보처리방침</b></a></li>
+          <li><a href="javascript:;">영상정보처리방침</a></li>
+          <li><a href="javascript:;">매장안내</a></li>
+          <li><a href="javascript:;">고객센터</a></li>
         </ul>
         <div class="seletsns_wrap">
           <div class="select">
